   These time response functions now error out correctly when the user tries to
   plot multiple systems in one window with mismatching numbers of inputs and
   outputs.  The problem was caused by Octave's built-in function "size_equal"
   which gave false positives for LTI objects.  The problem is solved by
   overloading the built-in function with a new LTI method "size_equal".

** doc/control.pdf
   Revised PDF manual.  There is now a function index at the end of the manual.


===============================================================================
control-2.4.0   Release Date: 2012-09-26   Release Manager: Lukas Reichlin
===============================================================================

** Multiplot feature for time-domain plotting:
   
     impulse    lsim
     initial    step
     
   Supported are now function calls like
   impulse (sys1, sys2, ...), step (sys1, 'b', sys2, 'r', ...)
   lsim (sys1, '-k', sys2, '--k', u), initial (sys, sys2, x0)
   The multiplot feature for frequency-domain plotting has already been
   introduced with control-2.3.54.

** Anderson, Madievski, MDSSystem, optiPID
   Updated example scripts to use new multiplot feature.

** sensitivity
   Fixed a problem with plotting, introduced with control-2.3.54.

** doc/control.pdf
   Updated PDF manual.


===============================================================================
control-2.3.54   Release Date: 2012-09-15   Release Manager: Lukas Reichlin
===============================================================================

** Multiplot feature for frequency-domain plotting:
   
     bode       nichols     pzmap
     bodemag    nyquist     sigma

   The functions above support calls like 
   sigma (sys1, sys2, ...), nyquist (sys1, 'b', sys2, 'r', ...),
   bode (sys1, '-k', sys2, '-.k', sys3, ':k', {wmin, wmax}).
   Time domain functions are not yet multiplot ready, but they will follow in
   control-2.4.0.

** plot